伪类和伪元素

--- a/CSS/1-注释及选择器.md
+++ b/CSS/1-注释及选择器.md
@@ -55,5 +55,38 @@
 
 |选择器|示例|
 |:---:|:---:|
-|交集选择器|.class#id, div#id|
+|交集选择器|.class#id|
 |并集选择器|#id, .class, div|
+
+## 对比伪类和伪元素
+
+伪类和伪元素都是选择器，适用于
+
+- 无法更改HTML
+- 要选择的元素不固定
+- 要选择的元素状态和位置关系固定
+
+两者的区别如下：
+
+- 伪类用于选择元素的特定状态，单冒号开头
+  - 位置关系伪类：:nth-child() :first-child :first-of-type
+  - 用户行为伪类：:hover :checked
+  - 其他状态伪类：:enabled :lang(en)选取语言为英文的元素
+- [伪元素](https://developer.mozilla.org/zh-CN/docs/Web/CSS/Pseudo-elements)用于选择元素的特定部分，双冒号开头
+  - ::first-letter 第一行的第一个字母 首字下沉
+  - ::first-line 第一行 首行缩进
+  - ::before 元素的第一个子元素 配合content使用
+  - ::after 元素的最后一个子元素 配合content使用
+  - ::placeholder 表单默认文本 更改提示样式
+
+## CSS选择器命名规则
+
+- 不能以数字、连字符-开头
+- ID选择器以#开头
+- 类选择器以.开头
+
+## 什么是CSS无效选择器
+
+运行环境无法解析的CSS选择器，运行环境会跳过无效选择器
+
+## 无效选择器有什么用途
