--- a/CSS/1-注释及选择器.md
+++ b/CSS/1-注释及选择器.md
@@ -68,7 +68,7 @@
 
 两者的区别如下：
 
-- 伪类用于选择元素的特定状态，单冒号开头
+- [伪类](https://developer.mozilla.org/zh-CN/docs/Web/CSS/Pseudo-classes)用于选择元素的特定状态，单冒号开头
   - 位置关系伪类：:nth-child() :first-child :first-of-type
   - 用户行为伪类：:hover :checked
   - 其他状态伪类：:enabled :lang(en)选取语言为英文的元素
@@ -90,3 +90,162 @@
 运行环境无法解析的CSS选择器，运行环境会跳过无效选择器
 
 ## 无效选择器有什么用途
+
+利用浏览器无效属性和无效选择器来区分运行环境
+
+- 改善CSS兼容兼容性。常用CSS Hacks
+- 使用运行环境的私有属性，渐进性增强样式
+
+## 什么是渐进式样式
+
+利用组合CSS Hacks和私有属性，较低版本浏览器保持页面布局和基本样式，在高版本浏览器中使用更高级属性或运行环境的私有属性，增强页面样式，提升用户体验
+
+## 如何优化选择器，提高性能
+
+CSS选择器效率从高到低：`ID>类>相邻>子代>后代>通配符>属性>伪类`
+
+CSS选择器的读取顺序：从右到左逐级匹配
+  
+提高性能的方法：
+
+- 多使用高效选择器
+- 减少选择器层级
+- 高效选择器在前
+- 避免使用通配符选择器
+- 多使用**继承**
+
+## 什么是继承
+
+CSS属性分为继承属性和非继承属性，继承属性默认值为父元素该属性的计算值，非继承属性和根元素的继承属性的默认值为初始值
+
+非继承属性可以显式的声明属性值为inherit，让子元素的属性继承父元素
+
+常见的继承属性：
+
+- 字体font系列
+- 文本text-align text-ident line-height letter-spacing
+- 颜色color
+- 列表list-style
+- 可见性visibility
+- 光标cursor
+
+容易被误认为是继承属性的**非继承属性**
+
+- 透明度opacity
+- 背景background系列
+
+## 如何重置元素的属性值到初始值
+
+属性值`initial`可以将属性值设为W3C规范初始值
+
+属性`all`可以将元素的所有属性重置
+
+`all:initial`相当于清空了用户配置和浏览器默认样式
+
+`all:revert`属性还原。可以将子元素的属性值按照以下规则还原：
+
+- 继承属性：重置到父元素的属性值
+- 非继承元素或者父元素继承属性未设置：重置到用户配置或者浏览器迷人属性
+
+## CSS优先级规则
+
+- 开发者定义选择器>用户定义选择器>浏览器默认选择器
+- `style=""`>`<style>`>`<link>`
+- ID选择器>类选择器、属性选择器、伪类选择器>类型选择器、伪元素选择器
+- 相同优先级，书写顺序后>前
+- 同级选择器，复合选择器>单选择器
+- 自身选择器>继承自父级的选择器
+- 用户配置的!important>开发者!important>其他
+
+## !important的作用和弊端，如何避免
+
+- 作用：忽略选择器优先级，让声明的属性总是生效
+- 弊端：
+  - 破坏原CSS级联规则，增加调试难度
+  - 修改样式变得困难
+  - 污染全局样式
+- 避免：
+  - 用选择器优先解决样式冲突
+  - 不在全局、会被复用的插件中使用important
+  - 通过CSS重命名或者[Shadow DOM](https://developer.mozilla.org/zh-CN/docs/Web/Web_Components/Using_shadow_DOM)限制CSS作用域
+
+## 如何计算选择器的优先级
+
+我们将选择器的优先级化为权重，为不同类型的CSS选择器设置初始权重，权重累加值越高，优先级越高
+
+|选择器|权重|
+|:---:|:---:|
+|行间style属性|1000|
+|ID选择器|100|
+|类、属性、伪类|10|
+|标签、伪元素|1|
+
+示例:
+
+```js
+// css
+<style>
+  div { /* 优先级 1 */
+    color: red;
+  }
+  div.c { /* 优先级 1 + 10 = 11 */
+    colo: gray;
+  }
+  .c.c.c.c.c.c.c.c.c.c.c { /* 优先级 10 * 11 = 110，不进位，90 */
+    color: blue;
+  }
+  #id { /* 优先级 100 */
+    color: yellow
+  }
+</style>
+// html
+<div>红字</div>
+<div class="c">蓝字</div>
+<div id="id" class="c">黄字</div>
+```
+
+## 如何限制CSS选择器的作用域
+
+- 通过CSS命名限制
+
+  ```js
+  // css
+  <style>
+    .unique-name p {
+    /*这里设置的样式，不会影响其他p标签*/
+    }
+  </style>
+  // html
+  <div class="unique-name">
+    <p></p>
+    </div>
+    <div>
+    <p></p>
+  </div>
+  ```
+
+- 通过Shadow DOM限制：通过JS给已有元素创建影子DOM，将样式通过style标签写入影子DOM
+
+  ```js
+  // html
+  <div></div>
+  <p></p>
+  // js
+  <script>
+    const shadowDom = document.querySelector('div').attachShadow({mode: 'open'})
+    shadowDom.innerHTML = '<p></p>'
+    shadowDom.innerHTML = `<style>p {
+    /* 这里设置的样式，并不会影响原来的p标签 */
+    }</style>`
+  </script>
+  ```
+
+- 通过@document限制
+  
+  通过 CSS at-rule 新增的[@document](https://developer.mozilla.org/zh-CN/docs/Web/CSS/@document) 限制 CSS 仅在被满足条件的 URL 生效
+
+  可以限定 URL 的地址，前缀，域名和子域名或者根据正则匹配
+
+- 通过CSS Module限制
+
+  将 CSS 作为资源引入，[CSS Modules](http://www.ruanyifeng.com/blog/2016/06/css_modules.html) 会根据内容生成哈希字符串，字符串可以作为独一无二的类名
