--- a/CSS/3-布局.md
+++ b/CSS/3-布局.md
@@ -166,11 +166,138 @@
 
 上下相邻盒子的外边距没有累加而是重叠取其中的较大值，称之为外边距折叠
 
+- 上下相邻块盒子的间距 = 上盒子下边距和下盒子上边距的最大值
+  
+  将其中一个盒转换为内联块盒子
+
+- 空块盒子，上边距<=上榜盒子下边距，下边距<>=下盒子上边距，相当于不存在
+
+  解决方法：增加内容，直接写入或使用伪元素
+
+  ```css
+  div:first-of-type {
+    margin-bottom: 10px
+  }
+  div:nth-of-type(2) {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  /*解决方法之1：通过伪元素增加内容
+  div:nth-of-type(2)::before {
+    content: '内容';
+    display: block;
+  }*/
+  div:last-of-type {
+  margin-top: 10px
+  }
+  ```
+
+  ```html
+    <!-- 中间的空DIV，只要上外边距<=10px，下外边距<=10px，都不影响1和3的实际间距 -->
+    <div>1</div>
+    <div><!-- 内容 解决方法之2：直接增加内容 --></div>
+    <div>3</div>
+  ```
+
+- 没有触发BFC，边框，内边距和内容的父块盒子和子块盒子
+
+  父块盒子的上边距 = 父块盒子的上边距 和 子块盒子的上边距的最大值
+
+  父块盒子的下边距 = 父块盒子的下边距 和 子块盒子的下边距的最大值
+
+  ``` js
+  <style>
+    .parent {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      /*overflow: hidden; 解决方法之1：触发BFC*/
+      /*border: 1px solid black; 解决方法之2：设置边框*/
+      /*paddding-top: 1px; 解决方法之3：设置内边距*/
+    }
+    .sub {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+  </style>
+
+  <!-- 父块盒子和子块盒子的上外边距都是10px，下外边距都是10px -->
+  <div class="parent">
+    <!-- <div>内容</div> 解决方法之4：增加内容 -->
+    <div class="sub"></div>
+  </div>
+  ```
+
+  解决方法：
+
+  - 设置边框
+  - 设置内边距
+  - 增加内容，直接写入或使用伪元素
+  - 触发BFC的方法都可以
+
 ## 什么是块级格式上下文？
+
+定义：[块格式化上下文](https://developer.mozilla.org/zh-CN/docs/Web/Guide/CSS/Block_formatting_context)，英文全称Block Formatting Context
+
+它声明了一块布局区域，浏览器对区域内盒子按照一定方式布局，包括默认布局、弹性布局flex、网格布局grid、表格布局等
+
+- 默认布局时，区域高度包括浮动元素高度
+- 不同区域相互独立，区域内的盒子和区域外的盒子互不影响
+- 不同区域不会发生边框折叠
+
+创建：我们可以根据布局、溢出处理和有限布局，用不同的方法创建块级格式上下文
+
+- 根元素（`<html>`）
+- 浮动元素（元素的 float 不是 none）
+- 绝对定位元素（元素的 position 为 absolute 或 fixed）
+- 行内块元素（元素的 display 为 inline-block）
+- 表格单元格（元素的 display 为 table-cell，HTML表格单元格默认为该值）
+- 表格标题（元素的 display 为 table-caption，HTML表格标题默认为该值）
+- 匿名表格单元格元素（元素的 display 为 table、table-row、 table-row-group、table-header-group、table-footer-group（分别是HTML table、row、tbody、thead、tfoot 的默认属性）或 inline-table）
+- overflow 计算值(Computed)不为 visible 的块元素
+- display 值为 flow-root 的元素
+- contain 值为 layout、content 或 paint 的元素
+- 弹性元素（display 为 flex 或 inline-flex 元素的直接子元素）
+- 网格元素（display 为 grid 或 inline-grid 元素的直接子元素）
+- 多列容器（元素的 column-count 或 column-width (en-US) 不为 auto，包括 column-count 为 1）
+- column-span 为 all 的元素始终会创建一个新的BFC，即使该元素没有包裹在一个多列容器中（标准变更，Chrome bug）
+
+用途：清除浮动；解决外边框折叠；限定布局范围提高渲染性能
 
 ## 有哪些定位方式？
 
+- 静态定位:static
+- 相对定位:relative
+  - 创建BFC和定位上下文
+  - 当z-index不为auto时，创建折叠上下文
+- 绝对定位absolute
+  - 创建BFC和定位上下文
+  - 当z-index不为auto时，创建折叠上下文
+- 固定定位:fixed，相对transfrom:perspective和filter不为none的最近父元素，没有视窗
+  - 创建BFC和定位上下文
+  - 创建层叠上下文
+- 粘性定位：sticky
+  - 创建定位上下文
+  - 创建层叠上下文
+  - 滚动最近overflow不为visible父元素
+    - 未被卷曲：表现为未创建BFC的相对定位
+    - 将被卷曲：表现为绝对定位
+
 ## 什么是定位上下文？
+
+position不为static时，可以通过top right bottom left设置元素位置偏移量，并且不会影响其它元素的位置
+
+定位上下文，决定元素相对于哪个父元素偏移
+
+非静态定位元素，设置偏移量后
+
+- 相对于最近的非静态定位的父元素偏移
+- 没有，则相对于根元素`<html>`的父级，即视窗偏移
+
+可以给父元素设置position不为static改变定位上下文，决定子元素相对于谁偏移
+
+其中position:relative对父元素的副作用最小
+
+子绝父相常用于组件内部的绝对定位，而不影响组件外元素的位置关系
 
 ## 什么是层叠上下文？
 
