--- a/CSS/3-布局.md
+++ b/CSS/3-布局.md
@@ -295,19 +295,162 @@ position不为static时，可以通过top right bottom left设置元素位置偏
 
 可以给父元素设置position不为static改变定位上下文，决定子元素相对于谁偏移
 
-其中position:relative对父元素的副作用最小
+其中`position:relative`对父元素的副作用最小
 
 子绝父相常用于组件内部的绝对定位，而不影响组件外元素的位置关系
 
 ## 什么是层叠上下文？
 
+定义：层叠上下文是元素在Z轴上的层次关系集合并影响渲染顺序，改变z-index的值可以改变position为static的元素的层叠顺序
+
+层叠上下文中元素层级影响子元素的层级，兄弟元素间的层级由z-index影响
+
+创建：
+
+- 文档根元素（`<html>`）；
+- position 值为 absolute（绝对定位）或  relative（相对定位）且 z-index 值不为 auto 的元素；
+- position 值为 fixed（固定定位）或 sticky（粘滞定位）的元素（沾滞定位适配所有移动设备上的浏览器，但老的桌面浏览器不支持）；
+- flex (flexbox (en-US)) 容器的子元素，且 z-index 值不为 auto；
+- grid (grid) 容器的子元素，且 z-index 值不为 auto；
+- opacity 属性值小于 1 的元素（参见 the specification for opacity）；
+- [mix-blend-mode](https://developer.mozilla.org/zh-CN/docs/Web/CSS/mix-blend-mode) 属性值不为 normal 的元素；
+- 以下任意属性值不为 none 的元素：
+  - transform
+  - filter
+  - perspective
+  - clip-path
+  - mask / mask-image / mask-border
+- isolation 属性值为 isolate 的元素；
+- -webkit-overflow-scrolling 属性值为 touch 的元素；
+- will-change 值设定了任一属性而该属性在 non-initial 值时会创建层叠上下文的元素（参考这篇文章）；
+- contain 属性值为 layout、paint 或包含它们其中之一的合成值（比如 contain: strict、contain: content）的元素。
+
+用途：
+
+- 改善兼容性
+  - 解决遮挡问题
+  - 解决滚动穿透问题
+- 提升移动端体验
+  - 如通过-webkit-overflow-scrolling: touch增加滚动回弹效果
+- 性能优化：频繁变化的内容单独一层放置
+
 ## 什么是浮动，如何清除浮动？
+
+定义：默认布局流中，浮动元素脱离文档流，沿内联布局的开始或结束位置放置；与绝对定位或者固定定位不同、浮动元素的宽高、内边距和边框，依然影响相邻元素的位置，相邻元素环绕浮动元素流式布置
+
+创建：
+
+- float不为none时创建浮动元素(left | right | none | inline-start | inline-end)
+- 弹性布局的父元素不能浮动
+
+清除浮动：浮动元素脱离文档流，只包含浮动元素的父元素高度为0，带来问题：
+
+- 父元素的高度不会随内容高度变化，内外边距、边框和背景无法自适应内容
+- 父元素后的元素与父元素内的浮动元素重叠
+- 父元素后的元素外边距属性无效
+
+解决问题的思路：
+
+- 设置高度
+  - 通过JS将父元素高度设为获取浮动元素的最大高度
+  - 通过CSS将父元素高度height设置固定值，然后设置溢出属性overflow，裁剪超出高度的部分或添加滚动条
+- 清除浮动：
+  - 通过HTML在父元素内部末尾添加清除浮动元素
+    - 通过CSS元素在父元素内部末尾添加清除浮动的伪元素
+
+    ```html
+    <style>
+    .box > div {
+      float: left;
+      width: 33.33%;
+    }
+    .clearfix {
+     clear: both;
+    }
+    .margin-top {
+      margin-top: 10px;
+    }
+    </style>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div class="clearfix"></div>
+      </div>
+    <div class="margin-top"></div>
+    ```
+
+    - 通过HTML在父元素下边添加清除浮动的元素(解决外边框问题)
+
+    ```js
+    <style>
+    .box > div {
+    float: left;
+    width: 33.33%;
+    }
+    .clearfix {
+    clear: both;
+    }
+    .margin-top {
+    margin-top: 10px;
+    }
+    </style>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      </div>
+      <div class="clearfix"></div>
+    <div class="margin-top"></div><!-- 清除浮动后，外边距生效 -->
+    ```
 
 ## 什么是滚动穿透，如何解决？
 
+滚动穿透是在移动端，尤其是iOS中，弹出模态框，用户模态框中的滑动滚动操作，穿过弹窗，导致页面滚动的现象(参见modal.html)
+
+滚动穿透不是bug，只是运行环境对溢出、滑动事件处理略有差距
+
+在CSS中，有两个属性：
+
+- pointer-events: none禁止元素成为鼠标事件的目标对象
+- touch-action: none禁止元素响应任何触摸事件
+
+  他们都不能阻止滚动事件，冒泡到父级，让父级继续滚动
+
+解决滚动穿透问题，比较的流行的方法是：
+
+- 当模态框弹出时，通过`position:fixed`创建层叠上下文，让不该滚动的父级的脱离文档流，设置`width:100%`保留宽度，并将`body`的卷曲高度保存起来。
+- 当模态框关闭时，通过`position:static`，让父级回归文档流，恢复之前的卷曲高度，即滚动位置(参见modal.html)
+
 ## 多方法实现水平居中
 
+- `text-align:center`适合内联或者内联块元素的父元素设置
+- `position:static`
+  - `margin:0 auto`适合宽度已知的元素
+    - 块元素`display:block`宽度固定`width:100px`
+    - 块元素`display:block`宽度自适应`width:fit-content`
+    - 表格元素`display:table`
+- `position:relative`/`position:absolute`/`position:fixed`/`position:sticky`脱离文档流后
+  - 偏移`left:50%`或者`right:50%`
+    - `margin-left`或`margin-right`设置宽度一半
+    - `transform: translateX(-50%)`
+  - 偏移`left:0`和`right:0`
+    - 宽度固定`width:100px`或自适应`width:fit-content`
+    - `margin: 0 auto`
+- `display:flex`父元素
+  - `justify-content: center`每行内部元素沿主轴居中排列
+
 ## 多方法实现垂直居中
+
+- 内联父元素
+  - `line-height:100px`
+- 内联块或者块元素
+  - `line-height`等于元素`height`
+  - `padding-top`等于`padding-bottom`
+- 内联或内联块元素
+  - `vertical-align: middle`元素与行的基线+字母x的高度的一半对齐
+- 表格单元格元素：`display:table`或者`<td>`
+  - `vertical-align: middle`内容或子元素垂直居中
 
 ## 多方法实现高度 100% 撑满视窗
 
