--- a/CSS/3-布局.md
+++ b/CSS/3-布局.md
@@ -135,7 +135,7 @@
   /* Keyword values */
   align-self: auto;
   align-self: normal;
-
+  
   /* Positional alignment */
   /* align-self does not take left and right values */
   align-self: center; /* Put the item around the center */
@@ -145,17 +145,17 @@
   align-self: self-end;   /* Align the item flush at the end */
   align-self: flex-start; /* Put the flex item at the start */
   align-self: flex-end;   /* Put the flex item at the end */
-
+  
   /* Baseline alignment */
   align-self: baseline;
   align-self: first baseline;
   align-self: last baseline;
   align-self: stretch; /* Stretch 'auto'-sized items to fit the container */
-
+  
   /* Overflow alignment */
   align-self: safe center;
   align-self: unsafe center;
-
+  
   /* Global values */
   align-self: inherit;
   align-self: initial;
@@ -193,10 +193,10 @@
   ```
 
   ```html
-    <!-- 中间的空DIV，只要上外边距<=10px，下外边距<=10px，都不影响1和3的实际间距 -->
-    <div>1</div>
-    <div><!-- 内容 解决方法之2：直接增加内容 --></div>
-    <div>3</div>
+  <!-- 中间的空DIV，只要上外边距<=10px，下外边距<=10px，都不影响1和3的实际间距 -->
+  <div>1</div>
+  <div><!-- 内容 解决方法之2：直接增加内容 --></div>
+  <div>3</div>
   ```
 
 - 没有触发BFC，边框，内边距和内容的父块盒子和子块盒子
@@ -205,7 +205,7 @@
 
   父块盒子的下边距 = 父块盒子的下边距 和 子块盒子的下边距的最大值
 
-  ``` js
+  ``` html
   <style>
     .parent {
       margin-top: 10px;
@@ -219,7 +219,7 @@
       margin-bottom: 10px;
     }
   </style>
-
+  
   <!-- 父块盒子和子块盒子的上外边距都是10px，下外边距都是10px -->
   <div class="parent">
     <!-- <div>内容</div> 解决方法之4：增加内容 -->
@@ -382,7 +382,7 @@ position不为static时，可以通过top right bottom left设置元素位置偏
 
     - 通过HTML在父元素下边添加清除浮动的元素(解决外边框问题)
 
-    ```js
+    ```html
     <style>
     .box > div {
     float: left;
@@ -449,12 +449,81 @@ position不为static时，可以通过top right bottom left设置元素位置偏
   - `padding-top`等于`padding-bottom`
 - 内联或内联块元素
   - `vertical-align: middle`元素与行的基线+字母x的高度的一半对齐
-- 表格单元格元素：`display:table`或者`<td>`
+- 表格单元格元素：`display:table-cell`或者`<td>`
   - `vertical-align: middle`内容或子元素垂直居中
+- `position:static`
+  - margin-top: 50%适合宽度已知元素transform: translateY(-50%)
+    - 块元素display:block高度固定height:100px
+    - 块元素display:block宽度自适应内容height:fit-content
+    - 表格元素display:table
+- `position:relative/position:absolute/position:fixed/position:sticky`脱离文档流后
+  - 偏移top:50%或者bottom:50%
+    - margin-top或margin-bottom设置高度一半
+    - transform: translateY(-50%)
+  - 偏移top:0和bottom:0
+    - 宽度固定height:100px或自适应height:fit-content
+    - margin: auto 0
+- `display:flex`父元素
+  - align-content: center多行内部元素整体沿交叉轴居中排列
+  - align-items: center每行内部元素整体沿交叉轴居中排列
+  - align-self: center单个内部元素沿交叉轴居中排列
 
 ## 多方法实现高度 100% 撑满视窗
 
+如果视窗高度是变化的，纯CSS布满视窗，可以用相对单位
+
+- 百分比，height默认为内容高度，可以从根元素内向到body，高度都设置为100%
+
+  ```html
+  <style>
+    html, body {
+    height: 100%;
+    }
+    div {
+      height: 100%;
+      background-color: azure;
+    }
+    body { margin: 0; }
+  </style>
+  <div></div>
+  ```
+
+- vh, 直接设置相对视窗高度
+  
+  ```html
+  <style>
+    div {
+      height: 100vh;
+      background-color: azure;
+    }
+    body { margin: 0; }
+  </style>
+  <div></div>
+  ```
+
+如果对于内容高度，多用视窗高度减去固定元素高度（如导航栏、状态栏），可用函数calc()
+
+- calc(100%-50px)
+- calc(100vh-50px)
+
 ## 圣杯布局
+
+圣杯布局的特点：
+
+![圣杯布局](img/圣杯布局.png)
+
+- 上下为通栏，下通栏清除浮动
+- 中间为三栏布置，子元素按照中左右的顺序浮动float:left
+  - 宽度：
+    - 左边栏宽度固定 = 父元素的左内边距padding-left
+    - 右边栏宽度固定 = 父元素的右内边距padding-right
+    - 中间内容宽度 = 100%
+  - 位置：
+    - 左右边栏相对定位`position:relative`
+    - 左边栏左外边距margin-left:-100%, right：宽度
+    - 右边栏左外边距margin-left：-宽度，right：-宽度
+  - 注意：
+    - 需设置最小宽度min-width，避免视窗过小，浮动错位
 
 ## 双飞翼布局
 
