--- a/CSS/3-布局.md
+++ b/CSS/3-布局.md
@@ -592,8 +592,22 @@ position不为static时，可以通过top right bottom left设置元素位置偏
 - 弹性布局
   - 水平:栏目间弹性布局，通过marin设置间距
   - 垂直：栏目间弹性布局，通过flex-direction:colunm沿着垂直方向布局
+- [网格布局](https://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html)
+  - 有局限性，只适用于固定布局
 
 ## 品布局
+
+与“品”字相似，第一行横跨两列，第二行分两列
+
+几乎所有CSS布局都可以实现品布局
+
+- 浮动布局：注意清除浮动
+- 内联块布局：注意设置父元素font-size:0px，避免display:inline-block的间隙
+- 表格布局：
+  - display：table不支持跨行跨列，这里使用table标签、实现
+  - 设置table-collapse:collapse
+- 弹性布局：flex-wrap: wrap开启多行显示
+- 网格布局：grid-column-start grid-column-end设定网格起止边缘
 
 ## 实现简易计算器
 
