--- a/CSS/3-布局.md
+++ b/CSS/3-布局.md
@@ -611,4 +611,16 @@ position不为static时，可以通过top right bottom left设置元素位置偏
 
 ## 实现简易计算器
 
+参见calc.html
+
 ## 视差滚动
+
+视觉差异产生立体的感觉
+
+- 固定背景：设置属性`background-attachment: fixed`，让背景图片相对视窗固定, 参见attachment
+- 使用3D效果：参见3d
+  - 滚动元素
+    - 指定观众与初始平面的距离perspective: 1px
+    - 自动溢出处理overflow:auto
+  - 父元素：撑开滚动元素
+  - 子元素：通过translateZ或translate3d指定子元素在 Z 轴位置
