--- a/CSS/4-动画.md
+++ b/CSS/4-动画.md
@@ -1,4 +1,4 @@
-# 动画
+# 动画[B站教程](https://www.bilibili.com/video/BV1uJ411T7NN?p=2)
 
 [toc]
 
@@ -34,6 +34,13 @@
   - 耗电量：减少耗电量
   - 引发不适：避免闪烁、变化强烈、3D 眩晕动画
   - 用户原因（喜好、疾病、工作等）已配置减少动画
+
+    综上，通过CSS媒体查询，在以下场景减少动画，始终避免引起不适的动画
+
+    - 移动设备
+    - refers-reduced-motion设置值为reduce
+    - 主体内容不应该只有纯动画，适当的文字说明，利于读屏软件和SEO
+
 - 提升动画体验
   - 减少不必要动画元素和属性，避免使用`transition:all`
   - 减少重排、重绘
@@ -53,8 +60,94 @@
 
 ## 对比 CSS 动画和 JS 动画？
 
+JS动画：
+
+- IE5.5-IE9支持
+- 报错时，影响其他脚本执行。定时器不准确
+- 逻辑交互复杂
+- JS在主线程的解析的环境中，阻塞或被阻塞其他操作。早期运行效率低。V8和现代架构浏览器已经改善
+
+CSS动画：
+
+- `transition` `animation`支持IE10+，早起是有属性多，不同环境效果策略不同
+- 不支持的环境直接跳过
+- 补间动画支持，设置关键帧刚容易。正在完善的事件和细颗粒度支持力度Animation()支持
+- 可通过合成属性transform在compositor线程实现动画
+
+JS动画依赖CSS样式：
+
+- 通过CSS开启硬件加速
+- 都应减少重排和重绘
+
+CSS更细颗粒化控制
+
+- 依赖JS
+
+综上：
+
+- 原来用JS的定时器，绘制每一帧，监听悬浮、获取焦点事件实现的动画和交互，都可以通过纯CSS动画配合伪类实现
+- 未来JS更专注于复杂逻辑动画或对CSS的动画更细粒度的交互
+
 ## 纯 CSS 实现打字机效果
+
+CSS 动画默认带过渡效果，浏览器会自动完成两个状态（关键帧）的补间动画，平滑过渡
+
+step(num, start / end)属性，可以从两个状态的补间动画中，平均取num个帧（过渡状态），让动画在这些帧间直接跳转
+
+step-start是setp(10, start)的简写，动画从开始状态起
+
+step-end是step(10, end)的简写，动画从结束状态起
+
+实现打字机效果，思路：
+
+给一个DIV添加动画，宽width从0到文字总长度变化
+
+有多少字，就从补间动画平均取多少个过渡状态，每状态对应显示一个字
+
+光标闪烁，只有显示和隐藏两个状态，期间不需要过渡效果，并且无限循环
+
+可见typing.html
 
 ## 纯 CSS 实现暗黑、夜间模式
 
+- 匹配暗黑模式：`prefers-color-scheme:dark`表示当前系统的主题色为暗色
+  - CSS媒体查询
+
+    ```css
+    @media(prefer-color-scheme:dark){
+      /* 暗黑模式的CSS */
+    }
+    ```
+
+- Link媒体查询
+
+  ```html
+  <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)" />
+  ```
+
+- 实现暗黑模式
+  - 变量：自己写具体样式
+
+    ```css
+    @media (prefers-color-scheme: dark) {
+      :root {
+      --color: white; /**为暗黑模式配置变量值**/
+      }
+    }
+    html {
+     color: var(--color);
+    }
+    ```
+
 ## 纯 CSS 实现骨架屏
+
+骨架屏在数据加载前，优先展示页面的大体结构，通常用灰色的明暗变化的块，提高用户体验
+
+纯CSS骨架屏适合Ajax和Fetch请求数据，填充模板引擎渲染的场景。如果请求的是页面本身，那么预渲染生成骨架屏是再好的方式
+
+用子绝父相的定位方式，在需要显示骨架屏的元素内放置两个伪元素
+
+- 一个盛满父元素，表示未填充数据前的元素
+- 一个填充倾斜的渐变条纹，移动条纹位置，模拟进度条动画
+
+参见Skeleton.html
