--- a/CSS/2-单位及盒模型.md
+++ b/CSS/2-单位及盒模型.md
@@ -32,8 +32,8 @@
 
 ## 如何使用rem自适应布局
 
-```js
-/* 假设UI稿的设计宽度是720px，默认字号是16px */
+```html
+<!-- 假设UI稿的设计宽度是720px，默认字号是16px -->
 <style>
   div { font-size: 1rem; }
 </style>
