--- a/CSS/3-布局.md
+++ b/CSS/3-布局.md
@@ -29,7 +29,7 @@
 - 子元素可以在垂直、水平方向上，正向或反向排列
 - 父元素通过[justify-content](https://developer.mozilla.org/zh-CN/docs/Web/CSS/justify-content)决定子元素在主轴的对齐方式
 
-  ```js
+  ```css
   /* Positional alignment */
   justify-content: center;     /*居中排列*/
   justify-content: start;      /*Pack items from the start*/
@@ -66,7 +66,7 @@
 
 - 父元素通过[align-items](https://developer.mozilla.org/zh-CN/docs/Web/CSS/align-items)决定子元素在交叉轴的对齐方式
 
-  ```js
+  ```css
   /* Basic keywords */
 
   align-items: normal;
@@ -96,7 +96,7 @@
 
 - 父元素通过[align-content](https://developer.mozilla.org/zh-CN/docs/Web/CSS/align-content)决定多行子元素整体在交叉轴的对齐方式
 
-  ```js
+  ```css
   /* 基本位置对齐 */
   /*align-content不采用左右值*/
   align-content: center;     /*将项目放置在中点*/
@@ -131,7 +131,7 @@
 
 - 子元素通过[align-self](https://developer.mozilla.org/zh-CN/docs/Web/CSS/align-self)决定自身在交叉轴的对齐方式
 
-  ```js
+  ```css
   /* Keyword values */
   align-self: auto;
   align-self: normal;
@@ -182,13 +182,13 @@
     margin-top: 10px;
     margin-bottom: 10px;
   }
-  /*解决方法之1：通过伪元素增加内容
+  /*解决方法之1：通过伪元素增加内容*/
   div:nth-of-type(2)::before {
     content: '内容';
     display: block;
   }*/
   div:last-of-type {
-  margin-top: 10px
+    margin-top: 10px
   }
   ```
 
@@ -385,14 +385,14 @@ position不为static时，可以通过top right bottom left设置元素位置偏
     ```html
     <style>
     .box > div {
-    float: left;
-    width: 33.33%;
+      float: left;
+      width: 33.33%;
     }
     .clearfix {
-    clear: both;
+     clear: both;
     }
     .margin-top {
-    margin-top: 10px;
+     margin-top: 10px;
     }
     </style>
     <div class="box">
