--- a/CSS/6-设计.md
+++ b/CSS/6-设计.md
@@ -20,3 +20,23 @@ Chrome浏览器在 chrome://settings/fonts 中允许用户设置最小字号
 ```
 
 ## 实现小于1像素的边
+
+随时显示屏技术的发展，很多移动设备的分辨率媲美甚至超过大屏设备
+
+在 CSS 中设置的像素宽度1px，在高分辨率的小屏设备上，可能会变粗
+
+现代webkit内核浏览器提供私有属性`-webkit-min-device-pixel-ratio`或`-webkit-max-device-pixel-ratio`
+
+用来当前设备的物理像素分辨率与CSS像素分辨率比值的最小值和最大值
+
+- 通过媒体查询，将边框宽度设为`1px/devicePixelRatio`
+
+  ```css
+  .border { border: 1px solid }
+  @media screen and (-webkit-min-device-pixel-ratio: 2) {
+    .border { border: 0.5px solid }
+  }
+  @media screen and (-webkit-min-device-pixel-ratio: 3) {
+    .border { border: 0.333333px solid }
+  }
+  ```
