--- a/CSS/6-设计.md
+++ b/CSS/6-设计.md
@@ -40,3 +40,110 @@ Chrome浏览器在 chrome://settings/fonts 中允许用户设置最小字号
     .border { border: 0.333333px solid }
   }
   ```
+
+- 伪类+`resolution+transform`, 其中resolution是标准属性，可以实现与上面的有属性形同的设置，transform缩小伪类的高度是`1/devicePixelRatio`
+
+  ```html
+  <style>
+  div::after {
+    content: '';
+    display: block;
+    border-bottom: 1px solid;
+  }
+  @media only screen and (min-resolution: 2dppx) {
+    div::after {
+      -webkit-transform: scaleY(0.5);
+      transform: scaleY(0.5);
+    }
+  }
+  @media only screen and (min-resolution: 3dppx) {
+    div::after {
+      -webkit-transform: scaleY(0.33);
+      transform: scaleY(0.33);
+    }
+  }
+  </style>
+  <div></div>
+  ```
+
+## 多方法实现图标
+
+|实现方式|特殊符号|PNG/GIF|Sprites|Icon Front|SVG|
+|:---:|:---:|:---:|:---:|:---:|:---:|
+|大小|font-size|width height|background-size|font-size|width height|
+|无锯齿|受font-family影响|放大可能有锯齿|放大可能有锯齿|windows字号较小时可能有影响|无锯齿|
+|颜色|单色 使用color属性设置|图片本身颜色 可使用滤镜修改|图片本身颜色 可使用滤镜修改|单色 color属性修改|彩色 可修改|
+|兼容性|不同浏览器可能效果不同|IE6不支持PNG透明|改大小IE9+
+SVG Sprites IE9+|/|IE9+|
+|响应式|-|√|√|-|√|
+|透明|√|√|√|√|√|
+|场景|简单图标+emoji|常用|HTTP1.1时合并请求|自定义字体|可定制图标|
+
+## 多方法实现圆角边框
+
+- 背景图片
+- border:radius
+
+  ```html
+  <style>
+  div {
+    height: 250px;
+    border: 10px solid;
+    border-radius: 10px;
+  }
+  </style>
+  <div></div>
+  ```
+
+- [clip:path](https://developer.mozilla.org/zh-CN/docs/Web/CSS/clip-path) 创建裁剪区域
+
+  ```html
+  <style>
+  div {
+    height: 250px;
+    border: 10px solid;
+    clip-path: inset(0 round 10px);
+  }
+  </style>
+  <div></div>
+  ```
+
+## 多方法实现小三角
+
+![三角](img/triangle.png)
+
+参见triangle.html
+
+- 伪类+特殊符号
+- 特殊符号+缩进+溢出+旋转
+- 边框为零
+
+## 多方法隐藏元素
+
+|属性|不占位|读屏软件隐藏|用于隐藏主体内容SEO|
+|:---:|:---:|:---:|:---:|
+|display: none|√|√|不抓取|
+|visibility: hidden|×|√|可能抓取|
+|opacity: 0|×|×|疑似作弊|
+|input type = hidden|√|√|不抓取|
+|position:absolute/fixed|√|×|疑似作弊|
+|aria-hidden = true|×|√|未知|
+|text-indent < 0|√|×|常用于在 Logo 处标识网站名称|
+|font-size: 0|√|×|疑似作弊|
+|overflow: hidden|√(裁剪)||×|抓取|
+|clip-path: polygon(0 0, 0 0, 0 0, 0 0)|√|×|未知|
+
+## 实现文字描边
+
+- [text-shadow](https://developer.mozilla.org/zh-CN/docs/Web/CSS/text-shadow)
+
+  ```html
+  <style>
+  div {
+    font-size: 100px;
+    color: #fff;
+    text-shadow: 0 0 3px black;
+  }
+  </style>
+  <div>文字描边</div>
+  ```
