--- a/CSS/8-方法论.md
+++ b/CSS/8-方法论.md
@@ -4,6 +4,23 @@
 
 ## 列举 CSS3 新特性
 
+### 什么是CSS3
+
+自CSS2.1过后，CSS被拆解为多个模块，每个模块有自己的版本并独立更新
+
+CSS3泛指这些模块的总和，作为CSS的第三个版本的CSS3事实上不存在
+
+### CSS3新特性有哪些
+
+- 颜色模块
+  - 新增opacity属性
+  - 新增hsl hsla rbg rgba方法
+  - 新增颜色关键字currentColor
+  - 定义transparent为raba(0, 0, 0, 0.0)
+- 选择器模块
+  - 新增属性选择器：`[attribute^="value"]``[attribute$="value"]``[attribute*="value"]`
+  - 新增伪类
+
 ## 什么是 CSS 组件化和原子化？
 
 ## 对比多种编写规则
