--- a/CSS/8-方法论.md
+++ b/CSS/8-方法论.md
@@ -19,18 +19,345 @@ CSS3泛指这些模块的总和，作为CSS的第三个版本的CSS3事实上不
   - 定义transparent为raba(0, 0, 0, 0.0)
 - 选择器模块
   - 新增属性选择器：`[attribute^="value"]``[attribute$="value"]``[attribute*="value"]`
-  - 新增伪类
+  - 新增伪类：`:target :enabled :disable :checked :indeterminate :root :nth-child :nth-last-child :nth-of-type :nth-of-last-type :last-child :first-of-type :last-of-type :only-child :only-of-type :empty :not`
+  - 新增普通兄弟选择器`~`
+  - 规范：伪元素表示为两个冒号`::`
+- 命名空间模块`@namespace`
+- 媒体查询模块
+  - 支持更多媒体查询条件tv color resolution等
+  - 支持link标签的媒体查询
+- 背景和边框模块
+  - 支持渐变linear-gradient背景
+  - 支持多背景图片
+  - 支持background-origin background-size background-clip
+  - 支持圆角边框border-radius
+  - 支持边框图片border-image
+  - 支持边框阴影border-shadow
+- 多列布局模块
+  - 支持多列布局 columns column-count column-width等
+- 值和单位模块
+  - 新增相对长度单位 rem ch vw vh vmax vmin
+  - 新增方法clac()
+- 弹性布局模块
+  - 支持弹性布局模块display:flex flex:direction flex-wrap
+- 文本装饰模块
+  - 新增着重符号text-emphasis
+  - 新增文本阴影text-shadow
 
 ## 什么是 CSS 组件化和原子化？
 
+### 组件化
+
+CSS组件是样式页面可复用的最小元素组合
+
+过去，前端常会按照页面结构将公共部分抽取成组件，方便在其他页面调用
+
+好处：
+
+- 无需重复编写CSS，结构级别复用
+- 保持风格统一
+- 一次修改，所有页面生效
+- 通过新建修饰符类的方式，个性化组件
+
+缺陷：
+
+- 限制设计师发挥，设计师可能需要先参考组件库已有组件的设计
+- 需要个性化的属性较多时，修饰原有组件和新建组件，都可能产生新的代码冗余
+- 组件库随项目越来越大，逐渐难以维护
+
+### 原子化
+
+CSS 原子化的每个原子类，几乎只包含一种属性定义
+
+这些原子类可以继续组合，生成属性更丰富的组件类
+
+前端更关注不同元素间的相同属性，即使这些元素的结构完全不同
+
+好处：
+
+- 无需重复编写 CSS，属性级别的复用
+- 保持风格统一
+- 一次修改，所有页面都生效
+- 更灵活，设计师可以发挥，前端可以自由组合
+- 类名与业务松耦合，甚至可以为不同业务定制
+- 组件的样式一目了然，容易维护
+
+缺陷：
+
+- 无统一标准，类名自己起，他人使用需要学习成本
+- HTML 类名顺序，无法决定 CSS 优先级，HTML 在后面的类名，可能因为在CSS 定义中在前，相同属性的值被 CSS 定义中后面的类名覆盖。违反心智模型
+- 项目较小时，编写原子库不经济
+- CSS-in-JS 改进原子化缺陷
+  - 类名无统一标准，需要学习
+  - 类名由 JS 根据内容生成，相同 CSS 的类名相同，不同 CSS 的类名不同且唯一，前端不用起类名
+  - 使 HTML 类名顺序生效
+    - 原子类只有一个属性，这意味着，我们把 CSS 类定义写进 JS，由JS根据 类名顺序，若属性名重复，则采用最后出现的属性值
+  - 此外，CSS-in-JS 还将样式与组件放到一起，能够从根本上避免组件移除，而样式忘记移除的问题
+
+原子化思想早已有之，Atomic CSS 和 tailwindcss 最有代表性
+
+更多组件库并不是只用组件化或原子化，而是通过组件化提供易用的组件和有限的可定制接口，通过原子化提供响应式布局、边距、颜色、字体等细粒度控制类 在工作中，组件化和原子化都能满足绝大多数的业务场景，是否应用更多地受设计思想和开发习惯的影响
+
+对于业务组件来说，使用公用原子类，影响组件的独立性。而仅在组件内部使用原子类，又会大大降低原子类的优势
+
+开发业务类组件，使用组件化的 CSS 依然是首选，除非我们决定引入或定义一套原子类 CSS，作用于整个组件库
+
+长期来看，原子化正越来越得到关注，结合 CSS-in-JS 的原子化未来可期
+
 ## 对比多种编写规则
 
-## CSS 属性的建议书写顺序，为什么
+OOCSS，SMACSS，BEM，ITCSS，Utility-First CSS，ACSS 都是 CSS 编写规则，是结构化编写和组织 CSS 的指南，掌握一种 CSS 方法论，更利于他人理解您的代码和团队协作
+
+- OOCSS：面向对象的 CSS ，全称是 Object Oriented CSS，我们把样式重复的代码片段，定义为 CSS 对象
+- 盒模型与皮肤无关：盒模型属性与颜色、背景等皮肤主题属性分选择器定义
+- 样式与位置无关：避免使用标签、关系选择器
+  - 应用时，我们通常提取多个元素的公用属性，作为基本类
+  - 在其基础上，通过其它类扩展每个元素的个性属性
+  - 这是避免 CSS 代码冗余的常用方法
+- SMACSS，可扩展模块化CSS架构，全称是 Scalable and Modular Architecture for CSS，定义了 CSS 分类和命名规则，并对CSS书写提出优化建议
+  - Base：默认，基础，通用规则，包括重置浏览器样式的规则
+  - Layout：布局规则，以l-或layout-开头
+  - Module：可复用模块规则
+  - State：布局或模块的特殊状态规则，如隐藏，激活等，以is开头
+  - Theme：皮肤或主题规则，可能包含另一种配色方案
+- BEM，块元素修饰符，全称是 Block Element Modifier，定义了一种 CSS 的命名规则，用于解决命名冲突：`.block-name__element-name--modifier-name`即`.块名__元素名--修饰符（元素名和修饰符都可为空）`其中：
+  - Block：块，忽略结构和优先级，具有独立意义的实体
+  - Element：元素，块内部没有独立意义的实体
+  - Modifier：修饰符，标识块或元素的外观、行为、状态被修改;含有修饰符的类名不可独立出现，通常跟在不含修饰符的类名后
+- ITCSS, 倒三角形CSS，全称是 Inverted Triangle CSS，主要用SASS实现, 提供了一种 CSS 由通用到具体的分层（分类）方法，层次可以按需增删：
+  - Settings：全局变量、方法
+  - Tools：全局使用函数、混入器
+  - Generic：浏览器默认样式重置
+  - Base：仅可使用类型（标签）选择器
+  - Objects：遵循OOCSSS的对象的盒模型，无颜色、背景等
+  - Components：可复用的组件
+  - Trumps：对组件的微调和其他样式定义，可使用 !important
+- Utility-First CSS: 实用类优先CSS, 提供了一种外观组件的构建方法，以 tailwindcss 为代表
+  - 按照一定规则，基于 CSS 实用类构建复杂外观组件
+  - 不用起类名
+  - 样式文件体积不会随项目无限增长
+  - 增删类名，比直接修改属性更安全，维护更容易
+- ACSS:原子CSS，全称是 Atomic CSS，可以看成 Utility-First CSS 的极致抽象, 提供了一种 CSS 类的定义方法，提升大型项目 CSS 复用度
+  - 每个类选择器中只包含一条属性定义，一次编写，到处运行
+  - 属性名类似函数，属性值类似函数参数，像写内联样式一样写类名，适合 CSS-in-JS
+  - 提供工具，可按需编译
+
+## CSS 属性的建议书写顺序，为什么？
+
+### 为什么要规定CSS书写顺序
+
+以前，我们规定 CSS 属性的书写顺序，期望其浏览器浏览器渲染顺序，减少不必要的重排和重绘
+
+浏览器渲染流程如下：
+
+![浏览器渲染流程](/CSS/img/浏览器渲染流程.png)
+
+- ① 解析 HTML 为 DOM Tree
+- ② 解析 CSS 为 CSSOM
+- ③ 深度遍历 Dom Tree，适配CSSOM。计算样式。将可见节点内容和计算后的样式放入 Render Tree
+- ④ 布局 Render Tree
+- ⑤ 绘制 Render Tree
+- ⑥ 合成 Render Tree
+- ⑦ 重排 Reflow
+- ⑧ 重绘 RePaint
+
+现代浏览器可以边下载边进行第①到⑤渲染，开发者也可以手动实现DOM懒加载 对单个样式的修改，不会马上引起重排或重绘，而是会加入队列
+
+当队列达到一定长度或一定时间后统一渲染，综上：
+
+- ① 虽然 CSS 按书写顺序解析，但书写顺序对渲染的影响已经很小
+- ② 有助于提升代码的可读性，可维护性，利于团队协作
+- ③ 有效避免重复或遗漏声明属性
+- ④ 避免实验中的私有属性与已加入规范的属性在具体实现的冲突
+
+### 合适的 CSS 属性书写顺序是
+
+根据浏览器的渲染顺序，我们总是将影响元素文档流占位的属性提前，参考 @mdo 的 CSS 编码规范：
+
+- ① 定位属性
+- ② 盒模型
+- ③ 排版属性
+- ④ 视觉属性
+- ⑤ 杂项属性
+- 遇到私有属性和标准属性时，将私有属性放在前面
 
 ## HTTP2.0 时代，CSS Sprites 还有用吗，为什么？
 
+### HTTP1.1下的CSS Sprites
+
+HTTP1.1 自身的[管道化](https://jiaolonghuang.github.io/2015/08/16/http-pipelining/)并不完善。浏览器实际通过为同一域名下的资源同时建立多个 TCP 连接，来实现并行传输，并且限制了最大连接数
+
+通过手动或者工程化的方式，将将小图片合并成大图，即 Sprites图（又称精灵图，雪碧图）。可以将多个对小图的请求，合并为对单张大图的请求，通过background-position定位在文档显示
+
+优点：
+
+- 避免大量小图请求阻塞其他资源下载
+- 减少多连接的重复的从发起请求到首字节响应的时间
+- 避免由于网络不稳定、客户端、服务端限制，导致部分小图丢失的情况
+- 图标、界面一次显示全，提升用户体验
+
+缺点：
+
+- 修改、增加和删除图片、修改位置，颜色麻烦
+- 请求图片的连接失败，整个界面图片效果丢失
+- 宽度和高度通常固定，自适应需要额外设置
+- 实现响应式图片时可能需要维护多张合成图，而且灵活度依然不够
+- HTTP1.1 下的 SVG Sprites
+  - 合并 SVG 到一张 SVG
+
+```html
+<svg>
+  <symbol id="svg1"><!-- SVG① --></symbol>
+  <symbol id="svg2"><!-- SVG② --></symbol>
+  <symbol id="svg3"><!-- SVG③ --></symbol>
+</svg>
+```
+
+- 在文档中通过use引用其中的一张 SVG
+
+```html
+<svg>
+  <use xlink:href="#svg1"></use>
+</svg>
+```
+
+SVG 具有无锯齿放大，容易修改尺寸和颜色等优点
+
+SVG Sprites 可以作为不考虑 IE8- 时，CSS Sprites替代
+
+但开发者仍然需要 手工 或 工程化方式，合成 SVG Sprites
+
+### HTTP2.0 支持多路复用
+
+HTTP2.0 下，一个 TCP 会话上可以进行任意数量的HTTP请求
+
+理论上，所有图片资源几乎可以并行下载
+
+CSS Sprites 最初要解决的问题，已经不复存在
+
+基于 TCP 本身的局限性（丢包时，整个会话都要重传），考虑网络的不稳定
+
+实际体验中，CSS Sprites 对比 HTTP2.0，通常仍会有轻微的速度提升
+
+是否使用 CSS Sprites，或者升级到 SVG Sprites 可以结合维护复杂度代入具体项目决定
+
 ## 你在开发中都遇到过哪些 CSS 兼容性问题，你是如何解决的？
+
+### IE 兼容性问题
+
+PC 时代，Trident 内核的 IE 在 5.5 - 8 时占据主导地位
+
+- 问题：IE6 PNG 图片不透明
+  - 答案：使用 progid:DXImageTransform.Microsoft.AlphaImageLoader 滤镜重复加载 PNG
+- 问题：IE6 浮动元素设置 margin，边距变 2 倍
+  - 答案：设置浮动元素display: inline
+- 问题：IE6 不支持绝对定位 position: fixed
+  - 答案：position: absolute;top: expression(((t = document.documentElement.scrollTop) ? t : document.body.scrollTop) + 'px');
+- 问题：IE8 有链接的图片四周有黑边框
+  - 答案：img { border: none }
+
+### 测试
+
+- IEtester 比 IE9+ 自带 Simulater 更接近真实效果
+- 使用装有 低版本IE 的虚拟机镜像，模拟完全真实的低版本 IE 环境
+  - 微软甚至专门提供了一套90天激活的 win7 镜像
+- 非标与标准浏览器兼容性问题
+  - 标准属性不被支持，或者实现不同
+- 问题：IE兼容模式 与 标准浏览器 宽度和高度表现不同
+  - 答案：IE 兼容模式默认 box-sizing: border-box 而不是 box-sizing: content-box，可以统一声明为 前者，或者用 CSS hacks 设置值对 IE 兼容模式生效的宽高或边距
+- 问题：IE9- 不支持 opacity
+  - 答案：
+  
+    ```plaintext
+    opacity: .8;
+    filter: alpha(opacity = 80);
+    filter: progid:DXImageTransform.Microsoft.Alpha(style = 0, opacity = 80);
+    ```
+
+- 问题：IE9- 不支持 background-size 等 CSS3 新特性
+  - 答案：IE6+ 支持behavior，可以设置或检索对象的 DHTML 行为。引入 css3pie 其用这个属性让 IE 支持部分 CSS3 新特性
+- 问题：cursor: hand在标准浏览器无效
+  - 答案：用 IE 也支持的标准属性值cursor:pointer替代
+
+### CSS3 新特性兼容性问题
+
+CSS3 起，标准被模块化，每个模块相对独立。浏览器可能会将处于 **非推荐** 的阶段属性实验性实现，或者某个处于 **候选推荐** 阶段的标准又被否决。导致不同浏览器，以及同一浏览器的不同版本，对于新特性的实现差异。
+解决：
+
+- 人工或使用混入器添加私有前缀
+  - 工作量大，开发阶段冗余代码多
+  - 同一属性，有无私有前缀，后面接收的属性值类型、顺序等可能不同
+  - 部分私有前缀，需要加到属性值，而不是属性名上
+- PostCSS 的 autoprefixer 可以配置 Browserslist，按需对浏览器及其不同版本添加私有前缀
+
+### 移动端兼容问题
+
+主要是 iOS 和 Android 下移动浏览器兼容以及使用 Webview 开发的 APP 兼容问题
+
+注意：以下这些问题只会在特定版本的系统下出现
+
+- 问题：溢出含滚动条元素怒在 iOS 滑动体验卡顿
+  - 答案：给溢出滚动元素设置 -webkit-overflow-scrolling:touch
+- 问题：iOS 禁用按钮后，按钮样式异常
+  - 答案：给按钮设置 opacity: 1
+- 问题：iOS 监听`<span> <label>`点击无响应
+  - 答案：给元素设置 cursor:pointer
+- 问题：Android 输入框显示语音输入按钮
+  - 答案：隐藏语音输入按钮 input::-webkit-input-speech-button { display: none }
+- 想要让 APP 用户获得体验更一致，减少兼容性问题：
+  - 将渲染引擎与源码一起打包，比如使用腾讯基于 X5 内核的浏览服务，安装包会变大
+  - 采用 React Native Flutter UniApp + Weex 等使用 HTML + CSS + JS 开发，原生渲染的方案
 
 ## 当你忘记一个 CSS 属性时，你一般如何做？
 
+- Emmet
+  
+  Emmet 能够提高 HTML 和 CSS 的书写效率，我们只需键入缩写，代码提示就会帮助我们找到相应属性名或属性值
+
+  IDE 如 VsCode 集成了 Emmemt，文本编辑器 Sublime Notepad++ VIM 等都有相应插件可以安装
+
+- 查看说明
+
+  IDE 如 VsCode 支持鼠标悬停属性名 或 属性值，查看说明
+
+  点击其中的链接，可以直达 MDN 对应文档
+
+- 搜索
+
+  MDN，里面有属性的用法，在浏览器实现的说明及对应规范的链接
+
+  Can I use，里面有属性在各个运行环境的兼容性情况，移动端版本数据想丢丰富
+
+- 记忆
+  
+  重新手打一遍遗忘的属性和属性名，注释搜索中发现的信息或链接，在后续重构中思考最佳实践，这样能收获更多
+
 ## 结合项目谈谈你是如何学习 CSS 的？
+
+- 发现问题
+
+  思考你在项目中遇到过哪些问题，你是否如何解决的
+
+  搜索，查文档、查规范是比请教他人更快速的问题解决途径
+
+  - Bad：同一问题，同一属性，每次都要搜索
+  - Good：高频的属性用法，尽量记住
+  - Bad：反复复制粘贴代码
+  - Good：找出代码中真正解决问题的部分，自己敲一遍
+  - Great：明白问题的原因和解决问题的思路
+
+- 提升效率、规范
+
+  思考项目有哪些可以改进的地方，你是如何改进的，成果怎样
+
+  效率：是否可以使用工具、脚本，将原有 CSS及相关的图片编译、压缩、上传、部署 等流程化、自动化
+
+  规范：是否可以改进 CSS 文件、规则的组织形式，是否可以参考或者根据业务，拟定一套利于团队协作的开发规范，并通过工程化的方式推广规范（比如，在Commit前，对CSS代码进行规范性校验和自动更正）
+
+- 技术分享
+  
+  回顾一次你做的技术分享，你通过哪些渠道获取了权威的信息，是否手写代码验证了这些信息，是否有通过 脑图、动画、PPT 等提高信息分享的效率 - 回顾一次你与同事或同学的争论，你是如何证明自己观点是正确的，是拿出了权威的资料，请权威的人帮你说服，还是通过实际测试后，用数据说话
+
+- 学无止境
+  - CSS 最近有哪些新鲜事，可以新的草案，新的工具，新的方法论等，简单分享你的观点
+  - 项目中所用的技术栈，最近更新的内容是什么，比过去改进了什么，解决了什么问题，怎样解决的？
