--- a/js/01-ES3.md
+++ b/js/01-ES3.md
@@ -2,12 +2,148 @@
 
 [toc]
 
-## a = ?, a==1 && a==2 && a==3 成立
+## a = ?, a==1 && a==2 && a==3 成立 [bilibili解析](https://www.bilibili.com/video/BV1f34y147WM?spm_id_from=333.337.search-card.all.click)
+
+考察点：
+
+- **`==`会触发隐式转换，`===`不会触发隐式转换**
+- [对象类型转换](https://zh.javascript.info/object-toprimitive)
+- [值类型转换](https://zh.javascript.info/type-conversions)
+
+### 对象转字符串
+
+- 先尝试调用对象的toString()
+- 对象无toString()或者返回非原始值, 调用valueOf()方法
+  - 将该值转化为字符串，并返回字符串的结果
+- 否则抛出类型错误
+  
+### 对象转数字
+
+- 先尝试调用对象的 valueOf()，将返回原始值转为数字
+- 对象无 valueOf() 或 valueOf 返回不是原始值，调用 toString() 方法，将返回原始值转为数字
+- 否则，抛出类型错误
+
+### 对象转布尔值
+
+- Ture
+
+### 代码
+
+```js
+const a = {
+  let n = 1,
+  valueOf(){
+    return this.n++
+  }
+}
+if(a==1 && a==2 && a==3) console.log('true')
+```
+
+### 数组
+
+隐式转换会调用数组join方法
+
+```js
+const a = [1, 2, 3]
+a.join = a.shift
+if(a==1 && a==2 && a==3) console.log('true')
+
+```
 
 ## null == undefined 结果
 
+比较null和undefined时，不能将null和undefined隐式转换，规范规定结果相等
+
 ## 常见的类型转换
+
+|类型|值|to Boolean|to Number|to String|
+|:---:|:---:|:---:|:---:|:---:|
+|Boolean|true|-|1|"true"|
+|Boolean|false|-|0|"false"|
+|Number|123|true|-|"123"|
+|Number|Infinity|true|-|"Infinity"|
+|Number|0|false|-|"0"|
+|Number|NaN|false|-|"NaN"|
+|String|""|false|0|-|
+|String|"123"|true|123|-|
+|String|"123abc"|true|NaN|-|
+|String|"abc"|true|NaN|-|
+|Null|null|false|0|"null"|
+|Undefined|undefined|false|NaN|"undefined"|
+|Function|function(){}|true|NaN|"function(){}"|
+|Object|{}|true|NaN|"[object object]"|
+|Array|[]|true|0|""|
+|Array|["abc"]|true|NaN|"abc"|
+|Array|["123"]|true|123|"123"|
+|Array|["123","abc"]|true|NaN|"123,abc"|
 
 ## 对比 get 和 Object.defineProperty
 
-## 对比 escape encodeURI 和 encodeURIComponent
+### 相同点
+
+都可以定义属性被查询时的函数
+
+### 不同点
+
+在class内部使用
+
+- get属性被定义在实例原型
+- Object.defineProperty属性被定义在实例自身
+
+例如：
+
+```js
+console.clear();
+
+class TestGet {
+ #name;
+ constructor(name) {
+  this.#name = name;
+ }
+
+ get name() {
+  return "alskdjf";
+ }
+}
+
+let t = new TestGet("test name");
+console.log("t: ", t);
+console.log("t: ", t.hasOwnProperty("name")); // false
+console.log("t.__proto__.name: ", t.__proto__.name); // alskdjf
+
+let obj = Object.create({});
+
+Object.defineProperty(obj, "name", {
+ get: () => {
+  return this.name;
+ },
+ set: (name) => {
+  this.name = name + " world";
+ }
+});
+
+obj.name = "hello";
+console.log(obj.name); // hello world
+console.log(obj.hasOwnProperty("name")); // true
+console.log(obj); // {}
+```
+
+## 对比 ~~escape~~ encodeURI 和 encodeURIComponent([参见思否](https://segmentfault.com/a/1190000037793291))
+
+- ~~escape~~
+  
+  对字符串编码
+
+  ASCII 字母、数字 @ * / + - _ . 之外的字符都被编码
+
+- [encodeURI](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/encodeURI)
+
+  对 URL 编码
+
+  ASCII 字母、数字 @ * / + 和 ~ ! # $ & () =, ; ?- _ . '之外的字符都被编码
+
+- [encodeURIComponent](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/encodeURIComponent)
+  
+  对 URL 编码
+
+  ASCII 字母、数字 ~ ! * ( ) - _ . ' 之外的字符都被编码
