--- a/js/03-ES6.md
+++ b/js/03-ES6.md
@@ -27,3 +27,107 @@
 ### ES8
 
 - async、await
+- [OBject.values()](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/values)
+- [Object.entries()](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/entries)
+- [Object.hasOwnPropertyDescriptors()](https://zh.javascript.info/property-descriptors)
+- 填充字符串到指定长度 padStart padEnd 语法str.padEnd(targetLength [, padString])
+- SharedArrayBuffer 和 [Atomics](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Atomics)，共享内存位置读取和写入
+- 函数最后参数有尾逗号，与数组和对象保持一致
+
+### ES9
+
+- 异步迭代for await (let i of array)
+- Promise.prototype.finally()
+- 展开语法
+  - 构造字面量对象时，将对象按照键值对展开，克隆属性或者浅拷贝
+- 非转义序列的模板字符串
+- 正则表达式
+  - [命名捕获组](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/RegExp/exec)
+
+    ```js
+    const match = /(?<year>\d{4})/.exec('2022')
+    console.log(match.groups.year) // 2022
+    ```
+
+- 反向断言
+  - 肯定反向断言
+
+  ```js
+  const match = /(?<=\D)\d+/.exec('a123')
+  console.log(match[0]) // 123
+  ```
+
+  - 否定反向断言
+
+  ```js
+  const match = /(?<!\d)\d+/.exec('a123')
+  console.log(match[0]) // 123
+  ```
+
+  - dotAll 模式：增加  `s` 修饰符，让 `.` 可以匹配换行符
+  - Unicode 转义：新的匹配符合 Unicode 某属性所有字符写法 `\p{...}` 和 `\P{...}`
+
+  ```js
+  /^\p{Number}+$/u.test('①②③¼½¾¹²³ⅠⅡⅢ') // 匹配各种数字
+  /^\P{Number}+$/u.test('Ab.<(中文)>') // 匹配非数字
+  ```
+
+  - 非转义序列的模版字符串
+    - `\u` unicode转义
+    - `\x` 十六进制转义
+    - `\` 后跟数字，八进制转义
+
+### ES10
+
+- JSON.stringify()
+  - \ud800到 \udfff 单独转换，返回转义字符串
+  - \ud800到 \udfff 成对转换，对应字符存在，返回字符。不存在，返回转义字符串
+- flat 和 flatMap
+- trimStart 和 trimEnd
+- Object.fromEntries() 传入键值对列表，返回键值对对象
+- Symbol.prototype.description
+
+  ```js
+  const sym = Symbol('description')
+  sym.description // description
+  ```
+
+- `String.prototype.matchAll` 返回包含所有匹配正则表达式和分组捕获结果的迭代器
+- `Function.prototype.toString()` 返回精确字符，包括空格和注释
+- 修改  `catch` 绑定
+- 新基本数据类型  `BigInt`
+- `globalThis`
+- `import()`
+
+### ES11
+
+- String.prototype.replaceAll(old,new)
+- Promise.any()
+  - 一个resolve返回第一个resolve状态
+  - 所有reject反悔请求失败
+- WeakRefs
+  - 通过WeakMap WeakSet创建
+  - 创建对象的弱引用：该对象可被回收即使他仍被引用
+- 逻辑运算赋值表达式
+  - ||= `a ||= b // 若 a 不存在，则 a = b`
+  - &&= `a &&= b // 若 a 存在，则 a = b`
+  - ??= `a ??= b // 若 a 为 null 或 undefined，则 a = b`
+  - ?. `访问对象未定义属性`
+  - 数字分隔符_ `123_345_789`
+
+## == === Object.is()的区别
+
+- == 相等，如果两边类型不一致，进行隐式转换后，再比较。+0 和 -0 相等， NaN 不等于任何数
+- === 严格相等，如果类型不一致，就不相等。 +0 和 -0 相等， NaN 不等于任何数
+- Object.is() 严格相等，+0 和 -0 不相等， NaN 等于自身
+
+## a = [], a.push(...[1,2,3]), a = ?
+
+考察点
+
+- [push](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/push), 支持将一个或者多个元素添加到数组末尾, 并返回该数组的新长度。
+- apply
+  - 第一参数：指定 push 执行时的 this，即正在调用 push 的对象为数组 a
+  - 第二参数：传入数组或类数组对象作为参数数组，展开作为 push 的参数列表
+
+答案：`a = [1, 2, 3]`
